hw-03/exercise_1/Deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-hw03

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment
  namespace: kubernetes-hw03
  labels:
    app: nginx-server
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - name: nginx-cont
        image: nginx:1.19.4
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 20m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 128Mi
