hw-03/exercise_1/Service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
  namespace: kubernetes-hw03
  labels:
    app: nginx-server  
spec:
  selector:
    app: nginx-server
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
