hw-03/exercise_1/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: nginx-ingress
  namespace: kubernetes-hw03
spec:
  rules:
  - host: raul.student.lasalle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service 
            port:
              number: 80
